[project]
name = "qdrift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pydantic>=2.12.3",
    "rich-progress>=0.4.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
